# ssh-key-sync

./: .gitignore  Cargo.toml  README.md  example.config.toml
.github/workflows/: lint.yml  release.yml
src/: main.rs
